welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:7: error: '(' expected but identifier found.
  if estSurBiscuit {
     ^